# starting-ragchatbot-codebase

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_QUALITY.md  Makefile  pyproject.toml
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
frontend/: index.html  script.js  style.css
tests/: __init__.py  conftest.py  test_api.py  test_models.py
